--- a/src/com/friend/gui/fxml/MainMenu.fxml
+++ b/src/com/friend/gui/fxml/MainMenu.fxml
@@ -14,15 +14,15 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<fx:root minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" type="BorderPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="-Infinity" minWidth="-Infinity" type="BorderPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <ScrollPane fitToWidth="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-Infinity" minViewportHeight="200.0" minViewportWidth="570.0" minWidth="-Infinity" prefHeight="200.0" prefViewportHeight="200.0" prefViewportWidth="570.0" BorderPane.alignment="CENTER">
          <content>
-            <TableView fx:id="displayTable" minHeight="-Infinity" minWidth="-Infinity" prefWidth="200.0">
+            <TableView fx:id="displayTable" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="554.0">
               <columns>
                   <TableColumn fx:id="firstNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="150.0" resizable="false" text="First Name" />
                   <TableColumn fx:id="lastNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="150.0" resizable="false" text="Last Name" />
-                  <TableColumn editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="252.0" resizable="false" text="Phone Number" />
+                  <TableColumn fx:id="phoneNumberColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="283" resizable="false" text="Phone Number" />
               </columns>
                <contextMenu>
                   <ContextMenu>
@@ -31,6 +31,9 @@
                     </items>
                   </ContextMenu>
                </contextMenu>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
          </content>
          <BorderPane.margin>
