--- a/src/com/friend/gui/fxml/MainMenu.fxml
+++ b/src/com/friend/gui/fxml/MainMenu.fxml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
+<?language javascript?>
 <!--Imports-->
-
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
 
 <!--Main GUI Stuff-->
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <fx:root minHeight="400" minWidth="600" type="BorderPane" xmlns="http://javafx.com/javafx/8.0.172-ea"
          xmlns:fx="http://javafx.com/fxml/1">
+    <fx:define>
+        <ContextMenu fx:id="tableContextMenu">
+            <items>
+                <MenuItem mnemonicParsing="false" text="Add Friend..." />
+                <MenuItem mnemonicParsing="false" text="Delete Friend..."/>
+                <MenuItem mnemonicParsing="false" text="Edit Friend..."/>
+            </items>
+        </ContextMenu>
+    </fx:define>
+
+    <fx:define>
+
+    </fx:define>
+
+
     <top>
         <HBox>
             <MenuButton text="File" contentDisplay="CENTER">
@@ -27,21 +36,15 @@
         </HBox>
     </top>
    <center>
+       <!--This is the code for the main table display-->
       <ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-Infinity" minViewportHeight="200.0" minViewportWidth="570.0" minWidth="-Infinity" prefHeight="200.0" prefViewportHeight="200.0" prefViewportWidth="570.0" BorderPane.alignment="CENTER">
          <content>
             <TableView fx:id="displayTable" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="554.0">
               <columns>
-                  <TableColumn fx:id="firstNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="150.0" resizable="false" text="First Name" />
-                  <TableColumn fx:id="lastNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="150.0" resizable="false" text="Last Name" />
-                  <TableColumn fx:id="phoneNumberColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="283" resizable="false" text="Phone Number" />
+                  <TableColumn fx:id="firstNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="150.0" resizable="false" text="First Name"/>
+                  <TableColumn fx:id="lastNameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="150.0" resizable="false" text="Last Name"/>
+                  <TableColumn fx:id="phoneNumberColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="283" resizable="false" text="Phone Number"/>
               </columns>
-               <contextMenu>
-                  <ContextMenu>
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Add Friend..." />
-                    </items>
-                  </ContextMenu>
-               </contextMenu>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
