--- a/src/com/friend/gui/fxml/AddDialog.fxml
+++ b/src/com/friend/gui/fxml/AddDialog.fxml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <fx:root type="VBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
 
@@ -36,11 +29,11 @@
         <children>
              <FlowPane alignment="CENTER_LEFT" columnHalignment="CENTER" hgap="4.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="200.0" scaleShape="false" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
                  <Label text="("/>
-                 <TextField alignment="CENTER" maxWidth="-Infinity" prefWidth="50.0" promptText="000"/>
+                 <TextField fx:id="areaCodeField" alignment="CENTER" maxWidth="-Infinity" prefWidth="50.0" promptText="000"/>
                  <Label text=") -"/>
-                 <TextField alignment="CENTER" maxWidth="-Infinity" prefWidth="50.0" promptText="000"/>
+                 <TextField fx:id="phoneField1" alignment="CENTER" maxWidth="-Infinity" prefWidth="50.0" promptText="000"/>
                  <Label text="-"/>
-                 <TextField alignment="CENTER" maxWidth="-Infinity" prefWidth="75.0" promptText="0000" scaleShape="false"/>
+                 <TextField fx:id="phoneField2" alignment="CENTER" maxWidth="-Infinity" prefWidth="75.0" promptText="0000" scaleShape="false"/>
              </FlowPane>
         </children>
       </GridPane>
