--- a/src/com/friend/gui/fxml/MainMenu.fxml
+++ b/src/com/friend/gui/fxml/MainMenu.fxml
@@ -13,7 +13,7 @@
         <ContextMenu fx:id="tableContextMenu">
             <items>
                 <MenuItem mnemonicParsing="false" text="Edit..."/>
-                <MenuItem mnemonicParsing="false" text="Delete..."/>
+                <MenuItem onAction="#onDeleteAction" mnemonicParsing="false" text="Delete..."/>
             </items>
         </ContextMenu>
     </fx:define>
