--- a/src/com/friend/gui/fxml/AddDialog.fxml
+++ b/src/com/friend/gui/fxml/AddDialog.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<fx:root maxHeight="480" maxWidth="640" minHeight="-Infinity" minWidth="-Infinity" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="480.0" maxWidth="640.0" minHeight="-Infinity" minWidth="-Infinity" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@../css/AddDialog.css">
    <children>
       <GridPane>
         <columnConstraints>
@@ -23,7 +23,7 @@
                               <Insets bottom="16.0" left="16.0" right="6.0" top="16.0" />
                           </padding>
                       </Label>
-                      <TextField fx:id="firstNameField" editable="true" minWidth="125.0" prefColumnCount="15" prefWidth="125.0" promptText="John" />
+                      <TextField fx:id="firstNameField" minWidth="125.0" prefColumnCount="15" prefWidth="125.0" promptText="John" />
                   </children>
                <GridPane.margin>
                   <Insets />
@@ -35,9 +35,9 @@
                      <padding>
                         <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
                      </padding></Label>
-                      <TextField fx:id="lastNameField" editable="true" minWidth="125.0" prefColumnCount="15" prefWidth="125.0" promptText="Doe">
+                      <TextField fx:id="lastNameField" minWidth="125.0" prefHeight="25.0" prefWidth="132.0" promptText="Doe">
                      <HBox.margin>
-                        <Insets right="16.0" />
+                        <Insets />
                      </HBox.margin></TextField>
                   </children>
                <GridPane.margin>
@@ -58,6 +58,15 @@
                   </children>
               </HBox>
           </children>
+         <VBox.margin>
+            <Insets bottom="16.0" top="16.0" />
+         </VBox.margin>
       </GridPane>
+      <Pane prefHeight="45.0" prefWidth="463.0" style="-fx-background-color: #2a80a2;">
+         <children>
+            <Button fx:id="cancelBttn" styleClass="ui-button" cancelButton="true" layoutX="374.0" layoutY="7.0" prefHeight="30.0" prefWidth="75.0" text="Cancel" onAction="#onCancel"/>
+            <Button fx:id="confirmBttn" styleClass="ui-button" defaultButton="true" layoutX="299.0" layoutY="7.0" prefHeight="30.0" prefWidth="75.0" text="OK" onAction="#onConfirm"/>
+         </children>
+      </Pane>
    </children>
 </fx:root>
